--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,16 @@ a::after {
 
 /* Rocket Styling */
 
+.name {
+  font-weight: 600;
+}
+
 .rocket-container {
   display: flex;
   flex-direction: column;
-  margin: 5px 0;
+  margin: 5px 35px;
   padding-top: 20px;
-  gap: 19px;
+  gap: 30px;
 }
 
 .rocket-section {
