--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,12 @@ code {
     monospace;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 * {
   margin: 0;
   padding: 0;
